2013-05-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/ads_auth.c (ads_authenticate): Removed any role management.
	We don't let directory services do role management anymore.

	* misc/openvas_auth.c (openvas_is_user_admin, openvas_is_user_observer,
	openvas_set_user_role): Removed. The role management is done in Manager
	dabase now.

	* misc/openvas_auth.h: Removed protos accordingly.

2013-05-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/plugutils.c (scanner_add_port): Remove dead code that
	make no sense. It sets a variable "confirm" as static, but
	this variable is never used.

2013-05-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/plugutils.c (scanner_add_port): Removed code path for case
	of presense of a "DIFF_SCAN" argument. This one is not set
	anywhere nor does it make much sense. Probably remains of some
	experiments.

2013-05-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_file.c (openvas_file_copy, openvas_file_move): Check Glib
	version before using recently deprecated g_type_init().

2013-05-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removing file-based user-specific rules support.

	* misc/openvas_auth.c (openvas_auth_user_rules,
	openvas_auth_user_uuid_rules, uuid_file_contents,
	openvas_auth_mkrulesdir, openvas_auth_store_user_rules): Removed.

	* misc/openvas_auth.h: Removed protos accordingly.

	* misc/ldap_auth.c (ldap_authenticate): Removed querying rules.
	(ldap_auth_query_rules): Removed.

	* misc/ads_auth.c (ads_authenticate): Removed querying rules.
	(ads_query_rules): Removed.

2013-05-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/nvti.c (nvti_from_keyfile): Consistently free result of
	conversion.

2013-05-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Move creation of GnuPG homedirs here since
	openvas-libraries expects the directories to exist.

2013-05-07  Werner Koch  <wk@gnupg.org>
