@@ -1,5 +1,12 @@
 2013-05-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
+	Renamed "OPENVAS_USERS_DIR/.auth.conf" to OPENVAS_STATE_DIR/auth.conf.
+
+	* misc/openvas_auth.c (openvas_auth_init_funcs, openvas_auth_write_config):
+	Replaced OPENVAS_USERS_DIR by OPENVAS_STATE_DIR.
+
+2013-05-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
 	* misc/ads_auth.c (ads_authenticate): Removed any role management.
 	We don't let directory services do role management anymore.
 
